Added new tomcat parameters